--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tucil 3 STIMA</title>
   </head>
-  <body class="dark">
+  <body class="dark font-circular">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
